apps/sayhello-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sayhello-server
  labels:
    app: sayhello-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sayhello-server
  template:
    metadata:
      labels:
        app: sayhello-server
    spec:
      containers:
      serviceAccountName: sayhello-client
      - name: sayhello-server
        image: gcr.io/traffic-director-466922/td-app-app:latest
        ports:
        - containerPort: 8080
