apps/sayhello-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayhello-server
spec:
  selector:
    app: sayhello-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
